# rsrt

./: .gitignore  CHANGELOG.md  LICENSE  makefile  pyproject.toml  setup.py
.github/workflows/: ci.yaml
src/rsrt/: __init__.py  errors.py  option.py  result.py
tests/: test_option.py  test_result.py
